--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -45,10 +45,11 @@ em { font-style: italic; }
 
 div, article, section, header, footer, nav, figure, li { position: relative; }
 
-body { padding: 0; margin: 0; background-color: #eaeaea; }
+body { padding: 0; margin: 0; background-color: #f0f0f0; }
 
 header { padding: 1.75em; }
 @media screen and (min-width: 30em) { header { padding: 3.5em 2.5em 3.5em 2.5em; } }
+header a { color: #3cb878; }
 
 .documentation { padding: 1.75em; }
 @media screen and (min-width: 30em) { .documentation { padding: 2.5em; } }
@@ -57,7 +58,7 @@ header { padding: 1.75em; }
 .documentation.process .project-detail-heading { padding-left: .85em; padding-right: .85em; }
 .documentation.process .project-detail-content { padding-left: .6em; padding-right: .6em; padding-bottom: .6em; }
 
-header { background-color: #eaeaea; }
+header { background-color: #f0f0f0; }
 
 ul { list-style: none; }
 
@@ -148,7 +149,7 @@ html.no-touch .thumb-image img:hover { opacity: 1.0; }
 
 .absolutehorseradish-video, .foolsquest-video { background-color: #323232; }
 
-.project-types { font: 400 100%/1.4 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .05em; margin-bottom: 2em; padding-bottom: 0; }
+.project-types { font: 400 85%/1.4 "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; color: #616161; text-transform: uppercase; letter-spacing: .075em; margin-bottom: 2em; padding-bottom: 0; }
 
 .read-more { display: none; }
 @media screen and (min-width: 56.25em) { .read-more { display: block; } }
@@ -324,38 +325,3 @@ html[xmlns] .slides { display: block; }
 .white-bg { background-color: white; }
 
 .flexslider_navigation_icon { height: 19px; width: 29px; float: right; margin: 9px 18px 0 0; background: url("../icons/arrow-navigation.png") no-repeat left center; }
-
-#mc_embed_signup input { border: 1px solid #757575; -webkit-appearance: none; }
-
-#mc_embed_signup input[type=checkbox] { -webkit-appearance: checkbox; }
-
-#mc_embed_signup input[type=radio] { -webkit-appearance: radio; }
-
-#mc_embed_signup input:focus { outline: none; }
-
-#mc_embed_signup .button { color: white; background-color: #757575; -webkit-border-radius: 0.625em; -moz-border-radius: 0.625em; border-radius: 0.625em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; padding: .75em 1.5em; cursor: pointer; border: 1px solid #757575; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; display: block; margin: 0 0 2em 0; }
-#mc_embed_signup .button:hover { background-color: #424242; border: 1px solid #424242; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup .button { margin: 0 0 2em 0; } }
-
-#mc_embed_signup label { font-size: 150%; font-weight: 700; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; -o-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup label { font-size: 200%; } }
-
-#mc_embed_signup input.email, #mc_embed_signup input.name { -webkit-border-radius: 0.625em; -moz-border-radius: 0.625em; border-radius: 0.625em; font-family: "ff-tisa-sans-web-pro", "Helvetica Neue", Helvetica, sans-serif; font-size: 100%; color: #616161; padding: .75em 1.5em .75em 1em; cursor: text; margin: .5em 0; width: 100%; }
-
-#mc_embed_signup div#mce-responses { float: left; top: -1.4em; padding: 0em .5em 0em .5em; overflow: hidden; width: 90%; margin: 0 5%; clear: both; }
-
-#mc_embed_signup div.response { margin: 1em 0; padding: 1em .5em .5em 0; font-weight: bold; float: left; top: -1.5em; z-index: 1; width: 80%; }
-
-#mc_embed_signup #mce-error-response { display: none; }
-
-#mc_embed_signup #mce-success-response { color: #529214; display: none; }
-
-#mc_embed_signup label.error { display: block; float: none; width: auto; margin-left: 1.05em; text-align: left; padding: .5em 0; }
-
-#mc_embed_signup .indicates-required { color: #212121; padding-left: 0; padding-right: 0; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup .indicates-required { padding-left: 0; padding-right: 0; } }
-
-#mc_embed_signup .mc-field-group { width: 100%; max-width: 27em; padding: 0; }
-@media screen and (min-width: 56.25em) { #mc_embed_signup .mc-field-group { padding: 0; } }
-
-#mc_embed_signup .mc-field-group .asterisk { position: absolute; right: .6em; top: .4em; font-size: 150%; }
