--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -22,7 +22,6 @@ Well hello there! Thanks for taking a look around. If you are curious about the 
 // 07 Poster Image Centering / Cropping
 // 08 Mike Doughty Owl Interaction
 // 09 Flexslider
-// 10 MailChimp Form Styles
 // ==========================================================================
 
 // =========================
@@ -42,10 +41,10 @@ Well hello there! Thanks for taking a look around. If you are curious about the 
 }
 // These values aside from color should be reflected in the .copyright
 @mixin small-sub-text {
-	font: 400 100%/1.4 $font-sans;
+	font: 400 85%/1.4 $font-sans;
 	color:rgba(97,97,97,1.0);
 	text-transform:uppercase;
-	letter-spacing:.05em;
+	letter-spacing:.075em;
 }
 @mixin general-header-qualities {
 	font-weight:700;
@@ -181,12 +180,15 @@ nav,
 figure,
 li { position:relative; }
 
-body { padding:0; margin:0;	background-color: rgba(234,234,234,1.0); }
+body { padding:0; margin:0;	background-color: rgba(240,240,240,1.0); }
 
 header {
 	padding: $section-spacing-narrow;
 	@media screen and (min-width: $width-tiny) { 
 		padding: 3.5em 2.5em 3.5em 2.5em;
+	}
+	& a {
+		color:$seth-brand-color;
 	}
 }
 .documentation {
@@ -213,7 +215,7 @@ header {
 	}
 }
 header {
-	background-color:rgba(234,234,234,1.0);
+	background-color:rgba(240,240,240,1.0);
 }
 ul { list-style:none; }
 li { list-style-type:none; }
@@ -935,82 +937,3 @@ html[xmlns] .slides {display: block;}
 	margin: 9px 18px 0 0;
 	background: url('../icons/arrow-navigation.png') no-repeat left center;
 }
-
-// ======================================
-//	10 MailChimp Form Styles
-// ======================================
-
-#mc_embed_signup input {
-	border:1px solid rgba(117,117,117,1.0);
-	-webkit-appearance:none;
-}
-#mc_embed_signup input[type=checkbox] { -webkit-appearance:checkbox; }
-#mc_embed_signup input[type=radio] { -webkit-appearance:radio; }
-#mc_embed_signup input:focus { outline:none; }
-#mc_embed_signup .button {
-	color: rgba(255,255,255,1.0); 
-	background-color:rgba(117,117,117,1.0); 
-	@include rounded(.625em);
-	font-family:$font-sans;
-	font-size:100%;
-	padding:.75em 1.5em;
-	cursor:pointer;
-	border:1px solid rgba(117,117,117,1.0);
-	-webkit-transition: all .2s ease-in-out;
-  	-moz-transition: all .2s ease-in-out;
-  	-o-transition: all .2s ease-in-out;
-  	transition: all .2s ease-in-out;
-	display:block;
-	margin:0 0 2em 0;
-	&:hover {
-		background-color: rgba(66,66,66,1.0);
-		border:1px solid rgba(66,66,66,1.0);	
-	}
-	@media screen and (min-width: $width-medium) { 
-		margin:0 0 2em 0;
-	}
-}
-#mc_embed_signup label {
-	font-size: 150%;	
-	font-weight:700;
-	-webkit-transition: all .2s ease-in-out;
-  	-moz-transition: all .2s ease-in-out;
-  	-o-transition: all .2s ease-in-out;
-  	transition: all .2s ease-in-out;
-	@media screen and (min-width: $width-medium) { 
-		font-size: 200%;
-	}
-}
-#mc_embed_signup input.email, #mc_embed_signup input.name{
-	@include rounded(.625em);
-	font-family:$font-sans;
-	font-size:100%;
-	color:rgba(97,97,97,1.0);
-	padding:.75em 1.5em .75em 1em;
-	cursor:text;
-	margin:.5em 0;
-	width:100%;
-}
-#mc_embed_signup div#mce-responses{float:left;top:-1.4em;padding:0em .5em 0em .5em;overflow:hidden;width:90%;margin:0 5%;clear:both;}
-#mc_embed_signup div.response{margin:1em 0;padding:1em .5em .5em 0;font-weight:bold;float:left;top:-1.5em;z-index:1;width:80%;}
-#mc_embed_signup #mce-error-response{display:none;}
-#mc_embed_signup #mce-success-response{color:#529214;display:none;}
-#mc_embed_signup label.error{display:block;float:none;width:auto;margin-left:1.05em;text-align:left;padding:.5em 0;}
-#mc_embed_signup .indicates-required{
-	color:rgba(33,33,33,1.0);
-	padding-left:0;
-	padding-right:0;	
-	@media screen and (min-width: $width-medium) { 
-		padding-left:0;
-		padding-right:0;
-	}
-}
-#mc_embed_signup .mc-field-group{
-	width:100%;
-	max-width:27em;
-	padding:0;
-	@media screen and (min-width: $width-medium) { 
-		padding:0;
-	}
-}
-#mc_embed_signup .mc-field-group .asterisk{position:absolute;right:.6em;top:.4em;font-size:150%}
